Added a Privacy Policy and an End User Licence Agreement. I also fixed a few more bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
         <item>Good</item>
         <item>Poor</item>
     </string-array>
+    <string name ="conditions">By tapping Sign Up you agree to the applications Privacy Policy and EULA.</string>
 </resources>
